Add regression, E2E, and UI integration tests for university registration app
- Implemented a comprehensive regression test script for the university registration app, validating PostgreSQL compatibility and overall functionality.
- Created an end-to-end (E2E) test script to verify the complete flow of the KubeDB Monitor Agent, Control Plane, and Dashboard.
- Developed a UI integration test script to ensure the functionality and performance of the university registration app's user interface.
- Included detailed logging and result tracking in all test scripts for better visibility and debugging.
- Added health checks, API functionality tests, performance measurements, and concurrency tests in the UI integration tests.